examples/syntax_errors/undefined_operator.py
spam = 0
spam++  # Error on this line: undefined operator `++`
